--- a/Get_EOTest_Results.ipynb
+++ b/Get_EOTest_Results.ipynb
@@ -334,69 +334,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class exploreRaft in module exploreRaft:\n",
-      "\n",
-      "class exploreRaft(builtins.object)\n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  CCD_parent(self, CCD_name=None, htype='ITL-CCD', when=None, run=None)\n",
-      " |  \n",
-      " |  REB_CCD(self, REB_name=None, when=None, run=None)\n",
-      " |  \n",
-      " |  REB_parent(self, REB_name=None, when=None, run=None)\n",
-      " |  \n",
-      " |  __init__(self, db='Prod', prodServer='Prod', appSuffix='')\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  raftContents(self, raftName=None, when=None, run=None)\n",
-      " |  \n",
-      " |  raft_type(self, raft=None)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('ITL-3800C-145', 'S00', 'LCA-13574-007'),\n",
+       " ('ITL-3800C-022', 'S01', 'LCA-13574-007'),\n",
+       " ('ITL-3800C-041', 'S02', 'LCA-13574-007'),\n",
+       " ('ITL-3800C-100', 'S10', 'LCA-13574-009'),\n",
+       " ('ITL-3800C-017', 'S11', 'LCA-13574-009'),\n",
+       " ('ITL-3800C-018', 'S12', 'LCA-13574-009'),\n",
+       " ('ITL-3800C-102', 'S20', 'LCA-13574-010'),\n",
+       " ('ITL-3800C-146', 'S21', 'LCA-13574-010'),\n",
+       " ('ITL-3800C-103', 'S22', 'LCA-13574-010')]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "help(exploreRaft)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ETClientAPIException",
-     "evalue": "You must supply either serial number or hardwareId.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mETClientAPIException\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-127-5780074bcc7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0meR_prod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraftContents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m8831\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/datacat-utilities/python/exploreRaft.py\u001b[0m in \u001b[0;36mraftContents\u001b[0;34m(self, raftName, when, run)\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'timestamp'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwhen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetHardwareHierarchy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;31m# LCA-13574 is the REB.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/eTraveler-clientAPI/python/eTraveler/clientAPI/connection.py\u001b[0m in \u001b[0;36mgetHardwareHierarchy\u001b[0;34m(self, **kwds)\u001b[0m\n\u001b[1;32m    690\u001b[0m         \u001b[0;31m#    print 'key %s, value %s'%(r, rqst[r])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    691\u001b[0m         \u001b[0mrsp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__make_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'getHardwareHierarchy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mrqst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 692\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_decodeResponse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrsp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    693\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    694\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mgetContainingHardware\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/eTraveler-clientAPI/python/eTraveler/clientAPI/connection.py\u001b[0m in \u001b[0;36m_decodeResponse\u001b[0;34m(self, command, rsp)\u001b[0m\n\u001b[1;32m   1232\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mETClientAPINoDataException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrsp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'acknowledge'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1233\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1234\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mETClientAPIException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrsp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'acknowledge'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1235\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1236\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mETClientAPIException\u001b[0m: You must supply either serial number or hardwareId."
-     ]
-    }
-   ],
-   "source": [
-    "eR_prod.raftContents(run=8831)"
+    "eR_prod.raftContents(run=8831,raftName='LCA-11021_RTM-003_ETU2')"
    ]
   },
   {
