--- a/Get_EOTest_Results.ipynb
+++ b/Get_EOTest_Results.ipynb
@@ -19,6 +19,8 @@
     "\n",
     "edit $HOME/notebooks/.user_setups with:\n",
     "\n",
+   " pip install "git+https://github.com/slaclab/datacat.git#egg=datacat&subdirectory=client/python""
+    "\n",
     "export PYTHONPATH=$PYTHONPATH:/path/to/eTraveler-clientAPI/python\n",
     "\n",
     "export PYTHONPATH=$PYTHONPATH:/path/to/datacat-utilities/python\n",
