--- a/Welcome to TXPipe.ipynb
+++ b/Welcome to TXPipe.ipynb
@@ -11,7 +11,7 @@
     "Last Verified: 02/22/2019 <br>\n",
     "\n",
     "\n",
-    "TXPipe is a pipeline to perform a 3x2 pt analysis on DC2 products.   3x2 pt. refers to the combined analysis of galaxy clustering and weak lensing, and involves the computation of 3 2pt. functions, the autocorrelation of galaxy shapes (Shear-Shear) the autocorrelation of galaxy positions (Position-Position) and the cross-correlation of lens galaxy positions and source galaxy shapes (Shear-Position).\n",
+    "TXPipe is a pipeline to perform 3x2 pt analysis on DC2 products.   3x2 pt. refers to the combined analysis of galaxy clustering and weak lensing, and involves the computation of 3 2pt. functions, the autocorrelation of galaxy shapes (Shear-Shear) the autocorrelation of galaxy positions (Position-Position) and the cross-correlation of lens galaxy positions and source galaxy shapes (Shear-Position).\n",
     "\n",
     "This notebook serves to walk through the stages of the pipeline.  The pipeline lives in the TXPipe repo: https://github.com/LSSTDESC/TXPipe.  Each stage of calculation is a python module in this repo.  The pipeline is run as a series of these stages where the outputs of the previous stage are the inputs to the next stage.  This is run through the Parsl workflow system which is described here: https://ceci.readthedocs.io/en/latest/."
    ]
